--- a/Examples/ObjectiveC/Podfile
+++ b/Examples/ObjectiveC/Podfile
@@ -7,3 +7,9 @@ target 'YandexMobileMetricaPushSampleObjC' do
     pod 'YandexMobileMetricaPush'
 
 end
+
+target 'YandexMobileMetricaPushNotificationServiceExtenstionSampleObjC' do
+
+    pod 'YandexMobileMetricaPush'
+
+end
