--- a/Examples/Swift/Podfile
+++ b/Examples/Swift/Podfile
@@ -10,7 +10,7 @@ platform :ios, '9.0'
 
 target 'YandexMobileMetricaPushSampleSwift' do
 
-    pod 'YandexMobileMetrica', '~> 3.4'
+    pod 'YandexMobileMetrica', '~> 4.0'
     pod 'YandexMobileMetricaPush'
 
 end
@@ -19,4 +19,14 @@ target 'YandexMobileMetricaPushNotificationServiceExtenstionSampleSwift' do
 
     pod 'YandexMobileMetricaPush'
 
+end
+
+post_install do |installer|
+    installer.pods_project.targets.each do |target|
+        # In case of `Multiple commands produce .../XCFrameworkIntermediates/YandexMobileMetrica` problem
+        if target.name == 'YandexMobileMetrica-Static_Core'
+            target.remove_from_project
+        end
+        installer.pods_project.save()
+    end
 end
